Changelog
=========

0.5 (unreleased)
-----------------------------

- support mongodb

0.4 (2013-09-22)
----------------------------

- file repository(yet)

0.3 (2013-08-29)
--------------------------

- added repository factory API
- added get_many method

0.2 (2013-08-25)
-----------------------

- added pyramid config directive and venusian decorator

0.1.1 (2013-08-24)
-----------------------

- fix packaging bug

0.1 (2013-08-24)
-----------------------

- first release